Wrap title if it breaks onto more than 1 line; Fixes #15

--- a/less/_responsive.less
+++ b/less/_responsive.less
@@ -84,7 +84,7 @@
 			width: 180px;
 		}
 		.site-title {
-			line-height: 180px;
+			height: 180px;
 		}
 		nav {
 			float: right;
