--- a/less/style.less
+++ b/less/style.less
@@ -105,7 +105,10 @@ input[type='search'] {
 	}
 }
 .site-title {
-	line-height: 220px;
+	display: table-cell;
+	height: 220px;
+	vertical-align: middle;
+	line-height: 1.2;
 }
 .navigation-main {
 	margin: 0 0 40px;
